# Project-Meta

./: .devcontainer.json  Meta.cabal  README.md  test.sh  testEval.sh  testLib.sh
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
eval-tests/atomic/: arith.meta.out  combinations.meta.out  conditionals.meta.out  cons.meta.out  deeper-nesting.meta.out  fst.meta.out  function.meta.out  list.meta.out  nesting.meta.out  number.meta.out  pair.meta.out  snd.meta.out
eval-tests/define/: define2.meta.out  define3.meta.out
eval-tests/lambdas/: lambdas2.meta.out  lambdas3.meta.out  lambdas4.meta.out  lambdas5.meta.out
eval-tests/macros/: macro1.meta.out  macro3.meta.out
eval-tests/programs/: length.meta.out
eval-tests/quoting/: dots.meta.out  nested-quoting.meta.out  nested-splicing.meta.out  quoting.meta.out  splicing.meta.out
lib/: arith.l
lib-tests/arith/: div.meta.out  minus.meta.out  plus.meta.out  times.meta.out
lib-tests/bool/: and-1.meta.out  and-2.meta.out  cond-2.meta.out  quarter.meta.out
lib-tests/define/: defmacro-4.meta.out  defun-2.meta.out
src/: Main.hs
src/Bird/: Printer.hs
