cabal-version:       >=1.10

name:                Meta
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- author:
-- maintainer:
-- copyright:
-- category:
build-type:          Simple

executable meta
  main-is:             Main.hs
  other-modules:       Bird.Parser, Bird.Printer
  -- other-extensions:
  build-depends:       base >=4.9 && <4.16,
                       parsec >= 3.1.14,
                       directory >= 1.3.6

  hs-source-dirs:      src
  default-language:    Haskell2010
